--- a/ionic.project
+++ b/ionic.project
@@ -1,4 +1,10 @@
 {
-  "name": "BusHopper",
-  "app_id": ""
+    "name": "BusHopper",
+    "app_id": "",
+    "proxies": [
+        {
+            "path": "/api",
+            "proxyUrl": "https://api.octranspo1.com/v1.2"
+        }
+    ]
 }
